src/docs/asciidoc/v1/migrating-from-springfox.adoc
[[migrating-from-springfox]]
== Migrating from SpringFox

* Remove springfox and swagger 2 dependencies. Add `springdoc-openapi-ui` dependency instead.

[source,xml, subs="attributes+"]
----
   <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-ui</artifactId>
      <version>{springdoc-legacy-version}</version>
   </dependency>
----

* Replace swagger 2 annotations with swagger 3 annotations (it is already included with `springdoc-openapi-ui` dependency).
Package for swagger 3 annotations is `io.swagger.v3.oas.annotations`.

- `@Api` -> `@Tag`
- `@ApiIgnore` -> `@Parameter(hidden = true)` or `@Operation(hidden = true)` or `@Hidden`
- `@ApiImplicitParam` -> `@Parameter`
- `@ApiImplicitParams` -> `@Parameters`
- `@ApiModel` -> `@Schema`
- `@ApiModelProperty(allowEmptyValue = true)` -> `@Schema(nullable = true)`
- `@ApiModelProperty` -> `@Schema`
- `@ApiOperation(value = "foo", notes = "bar")` -> `@Operation(summary = "foo", description = "bar")`
- `@ApiParam` -> `@Parameter`
- `@ApiResponse(code = 404, message = "foo")` -> `@ApiResponse(responseCode = "404", description = "foo")`

* If you're using an object to capture multiple request query params, annotation that method argument with `@ParameterObject`

* This step is optional: Only if you have **multiple** `Docket` beans replace them with `GroupedOpenApi` beans.

Before:

[source,java, subs="attributes+"]
----
  @Bean
  public Docket publicApi() {
      return new Docket(DocumentationType.SWAGGER_2)
              .select()
              .apis(RequestHandlerSelectors.basePackage("org.github.springshop.web.public"))
              .paths(PathSelectors.regex("/public.*"))
              .build()
              .groupName("springshop-public")
              .apiInfo(apiInfo());
  }

  @Bean
  public Docket adminApi() {
      return new Docket(DocumentationType.SWAGGER_2)
              .select()
              .apis(RequestHandlerSelectors.basePackage("org.github.springshop.web.admin"))
              .paths(PathSelectors.regex("/admin.*"))
              .apis(RequestHandlerSelectors.withMethodAnnotation(Admin.class))
              .build()
              .groupName("springshop-admin")
              .apiInfo(apiInfo());
  }
----

Now:

[source,java, subs="attributes+"]
----
  @Bean
  public GroupedOpenApi publicApi() {
      return GroupedOpenApi.builder()
              .group("springshop-public")
              .pathsToMatch("/public/**")
              .build();
  }
  @Bean
  public GroupedOpenApi adminApi() {
      return GroupedOpenApi.builder()
              .group("springshop-admin")
              .pathsToMatch("/admin/**")
              .addOpenApiMethodFilter(method -> method.isAnnotationPresent(Admin.class))
              .build();
  }
----

If you have **only one** `Docket` -- remove it and instead add properties to your `application.properties`:

[source,properties, subs="attributes+"]
----
springdoc.packagesToScan=package1, package2
springdoc.pathsToMatch=/v1, /api/balance/**
----

* Add bean of `OpenAPI` type. See example:

[source,java, subs="attributes+"]
----
  @Bean
  public OpenAPI springShopOpenAPI() {
      return new OpenAPI()
              .info(new Info().title("SpringShop API")
              .description("Spring shop sample application")
              .version("v0.0.1")
              .license(new License().name("Apache 2.0").url("http://springdoc.org")))
              .externalDocs(new ExternalDocumentation()
              .description("SpringShop Wiki Documentation")
              .url("https://springshop.wiki.github.org/docs"));
  }
----

* If the swagger-ui is served behind a proxy:
   ** link:index.html#how-can-i-deploy-springdoc-openapi-ui-behind-a-reverse-proxy[how-can-i-deploy-springdoc-openapi-ui-behind-a-reverse-proxy]
* To customise the Swagger UI
   ** link:index.html#how-can-i-configure-swagger-ui[how-can-i-configure-swagger-ui]
* To hide an operation or a controller from documentation
   ** link:index.html#how-can-i-hide-an-operation-or-a-controller-from-documentation[how-can-i-hide-an-operation-or-a-controller-from-documentation]

++++
        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8127371937306964"
             crossorigin="anonymous"></script>
        <!-- HEADER2 -->
        <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-8127371937306964"
             data-ad-slot="2654893709"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
        <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
        </script>
++++
